syntax = "proto3";

package dtmb.backend.v1;

option go_package = "github.com/microsoft/dtmb-go/protos/backend/v1;backend";
option csharp_namespace = "Microsoft.DTMB.Backend.Autogen.Grpc.v1";

// Request for Metadata.
message MetadataRequest {
    // Empty
}

// Response for Metadata.
message MetadataResponse {
    // Version of the service.
    string version = 1 [json_name = "version"];
    // ID of the instance the service.
    string instance_id = 2 [json_name = "instanceId"];
}

message OrchestrationID {
    // The given ID of the orchestration instance.
    string instance_id = 1 [json_name = "instanceId"];
    // The autogenerated ID for this particular execution of the orchestration ID, typically a UUID.
    string execution_id = 2 [json_name = "executionId"];
}

message TraceContext {
    string trace_parent = 1 [json_name = "traceParent"];
    string trace_state = 2 [json_name = "traceState"];
    // Optional
    string span_id = 3 [json_name = "spanId"];
}

enum OrchestrationStatus {
    UNKNOWN = 0;
    PENDING = 1;
    RUNNING = 2;
    COMPLETED = 3;
    CONTINUED_AS_NEW = 4;
    FAILED = 5;
    CANCELED = 6;
    TERMINATED = 7;
    SUSPENDED = 8;
}

message TaskFailureDetails {
    string error_type = 1 [json_name = "errorType"];
    string error_message = 2 [json_name = "errorMessage"];
    string stack_trace = 3 [json_name = "stackTrace"];
    TaskFailureDetails inner_failure = 4 [json_name = "innerFailure"];
    bool is_retryable = 5 [json_name = "isRetryable"];
}
